--- a/index.html
+++ b/index.html
@@ -116,6 +116,33 @@
             <div class="imagen">
                 <img src="img/casaE2 (7).jpeg" alt="imagen galeria">
             </div>
+            <div class="imagen">
+                <img src="img/casaE3 (1).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (2).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (3).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (4).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (5).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (6).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (7).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (8).jpeg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/casaE3 (9).jpeg" alt="imagen galeria">
+            </div>
                         
         </div>
     </section>
