--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         <div class="modelo premier">
             <div class="contenido-modelo">
                 <h3>Modelo Premier</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, odit? Distinctio iure temporibus ab repellendus iste reiciendis accusantium nostrum, sit, cum accusamus omnis tempora facilis facere, pariatur ad repellat ex!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, odit? Distinctio iure temporibus ab repellendus 
+                    iste reiciendis accusantium nostrum, sit, cum accusamus omnis tempora facilis facere, pariatur ad repellat ex!</p>
                 <a href="#" class="btn">Más Información</a>
             </div>
         </div> <!--.modelo-->
