--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <a class="link" href="#">Modelos</a>
                         <a class="link" href="#">Galería</a>
                         <a class="link" href="#">Contacto</a>
+                        <a class="link" href="https://estebangimenez.github.io/portfolioweb.github.io/#header">Esteban Portfolio</a>
                     </nav>
                 </div>
             </div>
@@ -166,6 +167,7 @@
                         <a class="link" href="#">Modelos</a>
                         <a class="link" href="#">Galería</a>
                         <a class="link" href="#">Contacto</a>
+                        <a class="link" href="https://estebangimenez.github.io/portfolioweb.github.io/#header">Esteban Portfolio</a>
                     </nav>
                 </div>
             </div>
